# ADVNT

./: .gitignore  AGENTS.md  README.md  advnt_training_template.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
src/advnt/: __init__.py  base.py  importances.py  models.py  neutralization.py  regimes.py  sample_weights.py  ssl.py  validation.py  workflows.py
src/advnt/importances/: __init__.py  model.py  shap.py
tests/: test_models.py  test_neutralization.py  test_regimes.py
